# MLOps_project

./: .gitignore  LICENSE  Makefile  README.md  data.dvc  grounded-camp-410709-815bb427112e.json  grounded-camp-410709-eda23609dad5.json  index.html  input.csv  models.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: build-docker-image.yml  build_api.yml  ruff.yml  test.yml
API/: data_drift.py  report.html  testdata_report.html
API/app/: app.html  button_clicks_log.txt  drift_report.html  input.csv  main.py  prediction and feature_database.csv  report.html  requirements.txt  tmp.html  train_features.csv
dockerfiles/: api.dockerfile  empty.dockerfile  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.py
notebooks/: Dockerfile  database.csv  requests.ipynb  requirements.txt  test.ipynb
notebooks/app/: main.py  main2.py
reports/: README.md
src/: __init__.py  data_generator.py  predict_model.py  sweep.py  train.py
src/callbacks/: plotting_callback.py
src/conf/: default_config.yaml  sweep_config.yaml
src/conf/model/: BEiT.yaml  (+2 more)
src/data/: make_dataset.py
src/models/: SimpleCNN.py  ViT.py  model.py
src/utilities/: modules.py
src/visualizations/: profile.prof  visualize.py
tests/: __init__.py  test_app_main.py  test_data.py  test_test.py
tests/test_simpleCNN/: test_simpleCNN.py
wandb/run-20240111_113532-4fya7bpu/: run-4fya7bpu.wandb
wandb/run-20240111_113630-uryflte0/: run-uryflte0.wandb
wandb/run-20240111_113913-yu3jtbop/: run-yu3jtbop.wandb
wandb/run-20240111_114155-4jdv9eky/: run-4jdv9eky.wandb
wandb/run-20240111_114247-8e1w12ga/: run-8e1w12ga.wandb
(+43 files in other folders)
