[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "MLOps_project"
version = "0.0.1"
description = "for MLOps course at DTU"
authors = [
  { name = "Kasper J\u00f8rgensen", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = [
  "*/tests/*",
  "*/test_*",
  "*/setup.py",
  "*/__main__.py",
  "*/__init__.py",
  "*/__about__.py",
  "*/__version__.py",
  "*/_version.py",
  "*/version.py",
  "*/conftest.py",
  "*/conf.py",
  "*/setup.cfg",
  "*/setup_helpers.py",
  "*/setup_helpers."
  ]
